Argocd/gateway/argocd-route.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: ReferenceGrant
metadata:
  name: argocd-reference-grant
  namespace: argocd
spec:
  from:
  - group: gateway.networking.k8s.io
    kind: Gateway
    namespace: envoy-gateway-system
  to:
  - group: ""
    kind: Service

---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: argocd-route
  namespace: argocd
spec:
  parentRefs:
  - name: shared-gateway
    namespace: envoy-gateway-system

  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /argocd

    backendRefs:
    - name: argocd-server
      port: 80
